<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".SampleLogin">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="223dp"
        android:layout_marginEnd="298dp"
        android:layout_marginBottom="408dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="230dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="93dp"
        android:layout_marginBottom="554dp"
        android:text="@string/app_name"
        android:textColor="@color/grey"
        android:textSize="40dp" />

    <TextView
        android:id="@+id/textViewCreateAccount"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="180dp"
        android:layout_marginEnd="181dp"
        android:layout_marginBottom="90dp" />

    <TextView
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="303dp"
        android:background="@color/white"
        android:text="@string/intro"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="442dp"
        android:layout_marginBottom="270dp">

        <EditText
            android:id="@+id/TxtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/EnterPassword"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/botonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="539dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="144dp"
        android:text="@string/LogIn"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/addphoto"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="130dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="668dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="2dp"
        android:text="@string/Foto"
        android:textColor="@color/colorPrimary" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="-70dp"
        android:layout_marginBottom="223dp">

        <EditText
            android:id="@+id/TxtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/EnterEmail"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

</RelativeLayout>